Continue to add content

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import "./navBar/NavBar.scss";
+@import "./styles/font.scss";
 
-.sections {
-  margin-top: $nav-bar-height;
+.App {
+  font-size: $medium-font-size;
 }
