--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -1,8 +1,9 @@
-$xx-small: 2px;
-$x-small: 4px;
-$small: 8px;
-$medium: 16px;
-$medium-large: 24px;
-$large: 32px;
-$x-large: 64px;
-$xx-large: 128px;
+$xxx-small-spacing: 2px;
+$xx-small-spacing: 4px;
+$x-small-spacing: 8px;
+$small-spacing: 16px;
+$medium-spacing: 24px;
+$large-spacing: 32px;
+$x-large-spacing: 48px;
+$xx-large-spacing: 64px;
+$xxx-large-spacing: 128px;
