--- a/src/styles/colour.scss
+++ b/src/styles/colour.scss
@@ -1,5 +1,6 @@
-$primary-colour: rgb(61, 92, 133);
-$secondary-colour: rgb(63, 78, 99);
+$primary: rgb(48, 71, 100);
+$secondary: rgb(63, 78, 99);
+$accent: rgb(151, 216, 253);
 
-$background-colour: $primary-colour;
-$font-colour: white;
+$background: $primary;
+$font: white;
