--- a/src/pages/experienceSection/ExperienceSection.scss
+++ b/src/pages/experienceSection/ExperienceSection.scss
@@ -1,25 +1,16 @@
-@import "../../styles/font.scss";
-@import "../../styles/colour.scss";
+@use "@styles/font.scss";
+@use "@styles/colour.scss";
+@use "@styles/spacing.scss";
 
-$experience-width: 200px;
-$experience-height: 200px;
+$experience-height: 100px;
+
+$dropdown-icon-size: 25px;
 
 .experienceSection {
-  width: 100%;
+  width: 60%;
 
   .experienceList {
     display: flex;
-    justify-content: space-around;
-
-    .experience {
-      width: $experience-width;
-      height: $experience-height;
-      text-align: center;
-      align-content: center;
-      font-size: $large-font-size;
-      border: 3px solid black;
-      border-radius: 10px;
-      background-color: $secondary-colour;
-    }
+    flex-direction: column;
   }
 }
