--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -1,6 +1,6 @@
-$x-small-font-size: 8px;
-$small-font-size: 16px;
-$medium-font-size: 24px;
-$large-font-size: 32px;
-$x-large-font-size: 48px;
-$xx-large-font-size: 64px;
+$x-small: 8px;
+$small: 16px;
+$medium: 24px;
+$large: 32px;
+$x-large: 48px;
+$xx-large: 64px;
