--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -1,9 +1,9 @@
-$xxx-small-spacing: 2px;
-$xx-small-spacing: 4px;
-$x-small-spacing: 8px;
-$small-spacing: 16px;
-$medium-spacing: 24px;
-$large-spacing: 32px;
-$x-large-spacing: 48px;
-$xx-large-spacing: 64px;
-$xxx-large-spacing: 128px;
+$xxx-small: 2px;
+$xx-small: 4px;
+$x-small: 8px;
+$small: 16px;
+$medium: 24px;
+$large: 32px;
+$x-large: 48px;
+$xx-large: 64px;
+$xxx-large: 128px;
