Move files to sections directory

--- a/src/sections/experienceSection/experience/Experience.scss
+++ b/src/sections/experienceSection/experience/Experience.scss
@@ -24,4 +24,15 @@ $dropdown-icon-size: 25px;
       border-radius: 50%;
     }
   }
+
+  .experienceDate {
+    font-style: italic;
+    font-size: 20px;
+    padding: spacing.$small 0px;
+  }
+
+  .experienceDescription {
+  
+    font-size: 20px;
+  }
 }
