--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -12,6 +12,9 @@ $nav-bar-height: 80px;
   display: flex;
   justify-content: center;
   background-color: colour.$secondary;
+  
+  z-index: 999;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   // todo: jma - add shrinking effect upon scroll
 
   .navBarItemList {
