--- a/src/components/sections/skillsSection/SkillsSection.scss
+++ b/src/components/sections/skillsSection/SkillsSection.scss
@@ -32,11 +32,16 @@ $skill-logo-size: 100px;
       transition: color 0.3s ease;
 
       .skillLogo {
-        width: $skill-logo-size;
-        height: $skill-logo-size;
-        background-color: black;
-        border-radius: 50%;
+        font-size: $skill-logo-size;
+        position: relative;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
         margin-bottom: spacing.$small;
+
+        .hide {
+          opacity: 0;
+        }
       }
 
       .skillName {
@@ -44,7 +49,7 @@ $skill-logo-size: 100px;
       }
       
       &:hover {
-        color: colour.$accent;
+        // color: colour.$accent;
       }
     }
   }
