--- a/src/components/sections/projectsSection/ProjectsSection.scss
+++ b/src/components/sections/projectsSection/ProjectsSection.scss
@@ -13,14 +13,14 @@ $project-image-size: 200px;
 .projectButtons {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: spacing.$medium;
   padding-bottom: 10px;
 
   .projectButton {
-    width: 50px;
-    height: 50px;
-    background-color: black;
-    border-radius: 50%;
+    &:hover {
+      color: colour.$accent;
+      scale: 1.05;
+    }
   }
 }
 
@@ -38,7 +38,7 @@ $project-image-size: 200px;
       text-align: center;
       align-content: center;
       font-size: font.$large;
-      border: 3px solid black;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       border-radius: 10px;
       background-color: colour.$secondary;
       padding: spacing.$small;
@@ -57,6 +57,17 @@ $project-image-size: 200px;
       
         .projectDescription {
           font-size: font.$small-medium;
+        }
+      }
+        
+      .link {
+        transition: all 0.3s ease;
+        color: inherit;
+        text-decoration: none;
+    
+        &:hover {
+          color: colour.$accent;
+          scale: 1.05;
         }
       }
     }
