Update Project descriptions

--- a/src/components/sections/projectsSection/ProjectsSection.scss
+++ b/src/components/sections/projectsSection/ProjectsSection.scss
@@ -59,6 +59,7 @@ $project-image-size: 200px;
       
         .projectDescription {
           font-size: font.$small-medium;
+          text-align: start;
         }
       }
         
